version/0.4/_sources/examples/index.rst.txt
:orphan:


.. _gallery:

This section provides usage examples for PyDynamicReporting.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Examples
--------

Introductory examples show how to use PyDynamicReporting to create or connect to
an Ansys Dynamic Reporting service, create a database for a new service, and
create and visualize items in a database.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use PyDynamicReporting to create an Ansys Dynamic Reporting service, ...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-create_db_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_00-create_db.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a database</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to start an Ansys Dynamic Reporting service via a DOcker image, create a...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-connect_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_01-connect.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Connect services</div>
    </div>


.. raw:: html

    </div>


Intermediate examples
=====================

Intermediate examples show how to use PyDynamicReporting
to query an Ansys Dynamic Reporting database, modify its items,
and get their corresponding web components.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tagging is an important feature of Ansys Dynamic Reporting. Adding tags to items allows the dat...">

.. only:: html

  .. image:: /examples/25-intermediate/images/thumb/sphx_glr_00-tagging_thumb.png
    :alt:

  :ref:`sphx_glr_examples_25-intermediate_00-tagging.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Tagging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The Ansys Dynamic Reporting database can contain any number of items, from a few to tens of tho...">

.. only:: html

  .. image:: /examples/25-intermediate/images/thumb/sphx_glr_01-queries_thumb.png
    :alt:

  :ref:`sphx_glr_examples_25-intermediate_01-queries.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Item queries</div>
    </div>


.. raw:: html

    </div>


Advanced examples
=================

Advanced examples show how to use the low-level API in Ansys
Dynamic Reporting to create, query, and visualize reports based on
customers case studies.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To use PyDynamicReporting to build a report from scratch, you start a new Ansys Dynamic Reporti...">

.. only:: html

  .. image:: /examples/50-advanced/images/thumb/sphx_glr_00-complete_report_thumb.png
    :alt:

  :ref:`sphx_glr_examples_50-advanced_00-complete_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a report from scratch</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-basic/index.rst
   /examples/25-intermediate/index.rst
   /examples/50-advanced/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
